base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcp-gateway-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: kommander-traefik
  rules:
    - host: mcp-gateway.nkp-np.uwcu.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mcpgateway-service
                port:
                  number: 8000
  tls:
    - hosts:
        - mcp-gateway.nkp-np.uwcu.org
